upadated reward in Lab10

--- a/Lab10/lab10.ipynb
+++ b/Lab10/lab10.ipynb
@@ -85,9 +85,7 @@
     "\n",
     "    def make_move(self, state):\n",
     "        empty_cells = np.where(np.array(state) == ' ')[0]\n",
-    "        # print(\"random player empty cells\",empty_cells)\n",
-    "        action = np.random.choice(len(empty_cells))\n",
-    "        # print(\"random player action\",action)    \n",
+    "        action = np.random.choice(len(empty_cells))   \n",
     "        state[action] = self.symbol\n",
     "        return state"
    ]
@@ -101,25 +99,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reward(state):\n",
+    "from collections import Counter\n",
+    "\n",
+    "def check_pattern(state,symbol):\n",
+    "    if symbol=='X':\n",
+    "        opp='O'\n",
+    "    else:\n",
+    "        opp='X'\n",
+    "    for i in [1,2,3,4,5,6,7,8]:\n",
+    "        for p in [0,2,6,8]:\n",
+    "            if i!=p and state[i]==opp and state[p]==symbol:\n",
+    "                return 3 #wherever the opp starts to play take a corner \n",
+    "    if (state==[' ',' ',' ',' ',symbol,' ',' ',' ',' ']\n",
+    "        or state==[' ',symbol,' ',' ',' ',' ',' ',' ',' ']\n",
+    "        or state==[' ',' ',' ',symbol,' ',' ',' ',' ',' ']\n",
+    "        or state==[' ',' ',' ',' ',' ',symbol,' ',' ',' ']\n",
+    "        or state==[' ',' ',' ',' ',' ',' ',' ',symbol,' ']):\n",
+    "        return -5 #penalize starting from the sides (1,3,5,7) and from the center\n",
+    "    if (state==[symbol,' ',' ',' ',' ',' ',' ',' ',' '] \n",
+    "       or state==[' ',' ',symbol,' ',' ',' ',' ',' ',' '] \n",
+    "       or state==[' ',' ',' ',' ',' ',' ',symbol,' ',' ']\n",
+    "       or state==[' ',' ',' ',' ',' ',' ',' ',' ',symbol]) :\n",
+    "        return 3 #encourage starting from the corner\n",
+    "    for o in [1,3,5,7]:\n",
+    "        for p in [0,2,6,8]:\n",
+    "            if (state[o]==opp and state[p]==symbol and (state[2]==symbol \n",
+    "            or state[6]==symbol or state[8]==symbol) and state.count(' ')==6):\n",
+    "                return 3 #if opp took a side and you already own a corner take one of the other corners\n",
+    "    if (state==[symbol,' ',' ',' ',opp,' ',' ',' ',symbol] \n",
+    "       or state==[' ',' ',symbol,' ',opp,' ',symbol,' ',' '] \n",
+    "       or state==[symbol,' ',' ',' ',opp,' ',symbol,' ',' ']\n",
+    "       or state==[' ',' ',symbol,' ',opp,' ',' ',' ',symbol]\n",
+    "       or state==[symbol,' ',symbol,' ',opp,' ',' ',' ',' ']\n",
+    "       or state==[' ',' ',' ',' ',opp,' ',symbol,' ',symbol]) :\n",
+    "        return 3 # if opp took the center take the opposite corner or the same corner in the row/col\n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        c=Counter(state[i:9:3])\n",
+    "        if c[\"symbol\"]==1 and c[\"opp\"]==2:\n",
+    "            return 4 #block opp on col\n",
+    "        c=Counter(state[i:i+3])\n",
+    "        if c[\"symbol\"]==1 and c[\"opp\"]==2:\n",
+    "            return 4 #block opp on rows\n",
+    "    c=Counter(state[0:9:4])\n",
+    "    if c[\"symbol\"]==1 and c[\"opp\"]==2:\n",
+    "        return 4 #block opp on main diag\n",
+    "    c=Counter(state[2:7:2])\n",
+    "    if c[\"symbol\"]==1 and c[\"opp\"]==2:\n",
+    "        return 4 #block opp on secondary diag\n",
+    "\n",
+    "    if (state.count(' ')==5 and ((state[0]==state[2]==state[6]==symbol) or (state[0]==state[2]==state[8]==symbol) \n",
+    "    or (state[0]==state[6]==state[8]==symbol) or (state[2]==state[6]==state[8]==symbol))):\n",
+    "        return 3 #make triangles (take three corners)\n",
+    "    \n",
+    "    return 0.1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reward(state,symbol):\n",
     "    if state.count(' ') == 0:\n",
-    "        return 0.5 #draw\n",
+    "        return 3 #draw\n",
     "    elif check_win(state)==True :\n",
-    "        return 10 #q-learning agent won\n",
+    "        return 15 #q-learning agent won\n",
     "    else:\n",
     "        # check if random player won\n",
     "        shadow_state = state.copy()\n",
     "        shadow_state = RandomPlayer('O').make_move(shadow_state)\n",
     "        if check_win(shadow_state)==True:\n",
-    "            return -10 #q-learning agent lost\n",
-    "        else:\n",
-    "            return 0.1 #reward for generic move, game not ended  \n",
-    "        \n",
-    "\n",
+    "            return -15 #q-learning agent lost\n",
+    "    return check_pattern(state,symbol)            \n",
     "\n",
     "def get_qvalue_max(qtable,state,action):\n",
     "    best_act = None\n",
@@ -145,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,24 +216,17 @@
     "        self.eps=0.4\n",
     "    \n",
     "    def make_move(self, state):\n",
-    "        # print(\"qply_state\",state)\n",
     "        possible_moves=np.where(np.array(state)==' ')[0]\n",
-    "        # print(\"board\",state)\n",
-    "        # print(\"qply possible_moves\",possible_moves)\n",
-    "        # action=np.random.choice(possible_moves)\n",
-    "        \n",
+    " \n",
     "        if QAGENTMODE==\"EPSILON_GREEDY\":\n",
     "            # epsilon greedy\n",
     "            if rd.random() < self.eps:\n",
     "                action=np.random.choice(possible_moves)\n",
-    "                # print(\"qplayer action explorative\",action)\n",
     "            else:\n",
     "                if all((tuple(state),val) not in qtable for val in possible_moves)==True:\n",
     "                    action=np.random.choice(possible_moves)\n",
-    "                    # print(\"qplayer action explorative\",action)\n",
     "                else:\n",
     "                    action,_=get_qvalue_max(qtable,state,None)\n",
-    "                    # print(\"qplayer action exploitative\",action)\n",
     "\n",
     "        elif QAGENTMODE==\"RANDOM\":\n",
     "            action=np.random.choice(possible_moves)\n",
@@ -185,27 +236,18 @@
     "            \n",
     "        hashable_state=tuple(state)\n",
     "\n",
-    "        # print(hashable_state,action)\n",
-    "\n",
     "        if (hashable_state,action) not in qtable:\n",
     "            #if new state,action tuple is discovered assign as q-value \n",
     "            # a random number between -1 and 1\n",
     "            qtable[(hashable_state,action)]=np.random.uniform(-1,1)\n",
-    "            # print(\"new move\")\n",
-    "            # print(\"qtable\",qtable)\n",
-    "            # print(\"action:\",action)\n",
     "            state[action]=self.symbol #update the state\n",
     "            return state \n",
     "        else:\n",
     "            #if a value already exists for the state, update the q-value\n",
     "            state[action]=self.symbol #update the state \n",
     "            _,qvalue_max=get_qvalue_max(qtable,tuple(state),action)\n",
-    "            # print(\"already discovered\")\n",
-    "            # print(\"qvalue_max\",qvalue_max)\n",
-    "            # print(\"qtable\",qtable)\n",
     "            curr_value=qtable[(hashable_state,action)]\n",
-    "            qtable[(hashable_state,action)]=(1-lr)*curr_value+lr*(reward(state)+discount*qvalue_max)\n",
-    "            # print(\"updated qtable\",qtable)\n",
+    "            qtable[(hashable_state,action)]=(1-lr)*curr_value+lr*(reward(state,self.symbol)+discount*qvalue_max)\n",
     "        return state\n",
     "\n",
     "    def use_only_qtable(self,state):\n",
@@ -227,18 +269,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5741ba65a5a349b9bcb6184a0abd9492",
+       "model_id": "2683c3ef1b3b454dbc2a6ed7afe2f7ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2000 [00:00<?, ?it/s]"
+       "  0%|          | 0/5000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -248,16 +290,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[284, 865, 851]\n",
-      "Q-learning agent win rate: 42.55 %\n",
-      "Random player win rate: 43.25 %\n",
-      "Draw rate: 14.2 %\n",
-      "qtable size: 4906\n"
+      "[701, 2178, 2121]\n",
+      "Q-learning agent win rate: 42.42 %\n",
+      "Random player win rate: 43.56 %\n",
+      "Draw rate: 14.02 %\n",
+      "qtable size: 9040\n"
      ]
     }
    ],
    "source": [
-    "lr=0.001\n",
+    "lr=0.01\n",
     "discount=0.5\n",
     "\n",
     "qtable=dict() #key:(state,action) tuple, value: q-value\n",
@@ -265,12 +307,11 @@
     "rndply= RandomPlayer('X')\n",
     "qply=QLearningAgent('O')\n",
     "results=[0,0,0] #draws,player1 wins,player2 wins\n",
-    "games=2000\n",
+    "games=5_000\n",
     "\n",
     "for i in tqdm(range(games)):\n",
     "    board=[' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
     "    player=1 if games<games//2 else 0\n",
-    "    # print(\"game:{}\",i+1)\n",
     "    while check_win(board)==False and board.count(' ')>0:\n",
     "        if player==1:\n",
     "            # completly random Q-learning agent\n",
@@ -278,13 +319,9 @@
     "        else:\n",
     "            board=rndply.make_move(board)\n",
     "        player=1-player\n",
-    "        # print_board(board)\n",
-    "        # print(\"spaces left\",board.count(' '))\n",
     "    if board.count(' ')==0:\n",
-    "        # print(\"Game over,draw!\")\n",
     "        results[0]+=1\n",
     "    else:\n",
-    "        # print(\"Game over,won by player\",player+1,\"!\")\n",
     "        results[player+1]+=1\n",
     "print(results)\n",
     "print(\"Q-learning agent win rate:\",results[2]/games*100,\"%\")\n",
@@ -302,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -338,56 +375,48 @@
       "['O', ' ', ' ']\n",
       "-----------------\n",
       "['X', ' ', ' ']\n",
-      "[' ', ' ', ' ']\n",
-      "['O', ' ', 'O']\n",
+      "[' ', ' ', 'O']\n",
+      "['O', ' ', ' ']\n",
       "-----------------\n",
-      "['X', ' ', 'X']\n",
-      "[' ', ' ', ' ']\n",
-      "['O', ' ', 'O']\n",
+      "Invalid move!\n",
+      "['X', ' ', ' ']\n",
+      "[' ', 'X', 'O']\n",
+      "['O', ' ', ' ']\n",
       "-----------------\n",
-      "['X', 'O', 'X']\n",
-      "[' ', ' ', ' ']\n",
-      "['O', ' ', 'O']\n",
+      "['X', ' ', 'O']\n",
+      "[' ', 'X', 'O']\n",
+      "['O', ' ', ' ']\n",
       "-----------------\n",
-      "['X', 'O', 'X']\n",
-      "[' ', ' ', ' ']\n",
-      "['O', 'X', 'O']\n",
+      "Invalid move!\n",
+      "['X', ' ', 'O']\n",
+      "[' ', 'X', 'O']\n",
+      "['O', ' ', 'X']\n",
       "-----------------\n",
-      "['X', 'O', 'X']\n",
-      "[' ', 'O', ' ']\n",
-      "['O', 'X', 'O']\n",
-      "-----------------\n",
-      "['X', 'O', 'X']\n",
-      "[' ', 'O', 'X']\n",
-      "['O', 'X', 'O']\n",
-      "-----------------\n",
-      "['X', 'O', 'X']\n",
-      "['O', 'O', 'X']\n",
-      "['O', 'X', 'O']\n",
-      "-----------------\n",
-      "Draw!\n"
+      "Human player won!\n"
      ]
     }
    ],
    "source": [
     "qply=QLearningAgent('O')\n",
     "hlpy= HumanPlayer('X')\n",
-    "\n",
+    "player = 1\n",
     "board=[' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
     "while check_win(board)==False and board.count(' ')>0:\n",
     "    if player==1:\n",
-    "        # Q-learning 4agent\n",
+    "        # Q-learning agent\n",
     "        board=qply.use_only_qtable(board)\n",
     "    else:\n",
     "        board=hlpy.make_move(board)\n",
     "    player=1-player\n",
     "    print_board(board)\n",
+    "\n",
     "if board.count(' ')==0:\n",
     "    print(\"Draw!\")\n",
-    "elif player==1:\n",
-    "    print(\"Q-learning agent won!\")\n",
-    "else:\n",
-    "    print(\"Human player won!\")\n"
+    "if player==1:\n",
+    "    print(\"Human player won!\")\n",
+    "elif player==0:\n",
+    "    print(\"Q-learning won!\")\n",
+    "\n"
    ]
   }
  ],
